# eclipto-rs

./: .gitignore  Cargo.toml  README.md
src/: foo.rs  main.rs  theme.rs
src/cli/: mod.rs
src/config/: mod.rs  reader.rs
src/theme_setter/: mod.rs
src/themes/: gruvbox.rs  gruvbox_light.rs  mod.rs
