[package]
name = "eclipto-rs"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Eclipto is a simple, fast, and easy-to-use theme manager for Linux."
documentation = "https://github.com/d1msk1y/eclipto-rs/blob/main/README.md"
readme = "README.md"
homepage = "https://github.com/d1msk1y"
repository = "https://github.com/d1msk1y"
keywords = ["theme", "theme-manager", "linux", "manager"]
categories = ["command-line-utilities"]



[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
